fix: configure script to run on semantic-release branch too

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "release": {
     "branches": [
-      "main"
+      "main",
+      "semantic-release"
     ],
     "plugins": [
       "@semantic-release/commit-analyzer",
